[package]
name = "manual_future"
description = "A future that must be manually completed, similar to Java's CompletableFuture"
version = "0.1.3"
authors = ["Dana Marcuse <dana@marcuse.us>"]
edition = "2018"
repository = "https://github.com/dmarcuse/manual_future.git"
homepage = "https://github.com/dmarcuse/manual_future"
readme = "README.md"
license = "MIT"
keywords = ["async", "await", "future", "completablefuture", "complete"]
categories = ["asynchronous", "concurrency"]

[dependencies]
futures-util = { version = "0.3.31", default-features = false, features = [
    "unstable",
    "alloc",
    "bilock",
] }

[dev-dependencies]
futures-executor = "0.3.31"
tokio = { version = "1.46.1", features = ["macros", "rt", "time"] }
